hospital info page

--- a/Templates/Customer/hosp-info.html
+++ b/Templates/Customer/hosp-info.html
@@ -5,10 +5,308 @@
 {% endblock %}
 
 {% block body %}
-<div class="container">
-    JOSH CAN YOU MAKE THIS PAGE HERE
+
+<div class="parallax-container">
+    <div class="parallax"><img src="https://pbs.twimg.com/media/Dd37dlNVMAAHKon.jpg"></div>
+     </div>
+
+    <div class="row">
+
+        <div class="col s12 m4">
+          <h2>About Me</h2>
+          <h5>Photo of me:</h5>
+          <iframe width="350" height="350" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJmYAMfkCDGjkRy5frWVOV__g&key=AIzaSyBuByTw9-fvhI5NbMzGb_uFWrxGZsGZdlc" allowfullscreen></iframe>
+          <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+          
+        <div class="col s12 m8">
+          <h2>TITLE HEADING</h2>
+          <h5>Title description, Dec 7, 2017</h5>
+          <div class="fakeimg">Fake Image</div>
+          <p>Some text..</p>
+          <p>Sunt in culpa qui officia deserun.</p>
+         
+        </div>
+
+      </div>
+
+   
+   
 </div>
+
+{% block style %}
+<style>
+    * {
+      box-sizing: border-box;
+    }
+    
+    body {
+      font-family: Arial, Helvetica, sans-serif;
+    }
+    
+    /* Float four columns side by side */
+    .column {
+      float: left;
+      width: 25%;
+      padding: 0 10px;
+    }
+    
+    /* Remove extra left and right margins, due to padding */
+    .row {margin: 0 -5px;}
+    
+    /* Clear floats after the columns */
+    .row:after {
+      content: "";
+      display: table;
+      clear: both;
+    }
+    
+    /* Responsive columns */
+    @media screen and (max-width: 600px) {
+      .column {
+        width: 100%;
+        display: block;
+        margin-bottom: 20px;
+      }
+    }
+    
+    /* Style the counter cards */
+    .card {
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+      padding: 16px;
+      text-align: center;
+      background-color: #f1f1f1;
+    }
+    </style>
+{% endblock %}
+
+
+
+<center><h3><span style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ; color: rgb(10, 76, 161); font-weight: bold ; "  > Consult Leading Doctors Over Video </span></h3></center>
+<p></p>
+
+<div class="row">
+  <div class="column">
+    <div class="card">
+      <h3>Name</h3>
+      <p>Designation, experience, Language</p>
+      <p>Consultation fees</p>
+    </div>
+  </div>
+
+  <div class="column">
+    <div class="card">
+      <h3>Card 2</h3>
+      <p>Some text</p>
+      <p>Some text</p>
+    </div>
+  </div>
+  
+  <div class="column">
+    <div class="card">
+      <h3>Card 3</h3>
+      <p>Some text</p>
+      <p>Some text</p>
+    </div>
+  </div>
+  
+  <div class="column">
+    <div class="card">
+      <h3>Card 4</h3>
+      <p>Some text</p>
+      <p>Some text</p>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+    <div class="column">
+      <div class="card">
+        <h3>Card 1</h3>
+        <p>Some text</p>
+        <p>Some text</p>
+      </div>
+    </div>
+  
+    <div class="column">
+      <div class="card">
+        <h3>Card 2</h3>
+        <p>Some text</p>
+        <p>Some text</p>
+      </div>
+    </div>
+    
+    <div class="column">
+      <div class="card">
+        <h3>Card 3</h3>
+        <p>Some text</p>
+        <p>Some text</p>
+      </div>
+    </div>
+    
+    <div class="column">
+      <div class="card">
+        <h3>Card 4</h3>
+        <p>Some text</p>
+        <p>Some text</p>
+      </div>
+    </div>
+  </div>
+
+
+  
+<div class="row">
+    <div class="column">
+      <div class="card">
+        <h3>Card 1</h3>
+        <p>Some text</p>
+        <p>Some text</p>
+      </div>
+    </div>
+  
+    <div class="column">
+      <div class="card">
+        <h3>Card 2</h3>
+        <p>Some text</p>
+        <p>Some text</p>
+      </div>
+    </div>
+    
+    <div class="column">
+      <div class="card">
+        <h3>Card 3</h3>
+        <p>Some text</p>
+        <p>Some text</p>
+      </div>
+    </div>
+    
+    <div class="column">
+      <div class="card">
+        <h3>Card 4</h3>
+        <p>Some text</p>
+        <p>Some text</p>
+      </div>
+    </div>
+  </div>
+
+
+  
+<div class="row">
+    <div class="column">
+      <div class="card">
+        <h3>Card 1</h3>
+        <p>Some text</p>
+        <p>Some text</p>
+      </div>
+    </div>
+  
+    <div class="column">
+      <div class="card">
+        <h3>Card 2</h3>
+        <p>Some text</p>
+        <p>Some text</p>
+      </div>
+    </div>
+    
+    <div class="column">
+      <div class="card">
+        <h3>Card 3</h3>
+        <p>Some text</p>
+        <p>Some text</p>
+      </div>
+    </div>
+    
+    <div class="column">
+      <div class="card">
+        <h3>Card 4</h3>
+        <p>Some text</p>
+        <p>Some text</p>
+      </div>
+    </div>
+  </div>
+
+
+
+  
+<div class="row">
+    <div class="column">
+      <div class="card">
+        <h3>Card 1</h3>
+        <p>Some text</p>
+        <p>Some text</p>
+      </div>
+    </div>
+  
+    <div class="column">
+      <div class="card">
+        <h3>Card 2</h3>
+        <p>Some text</p>
+        <p>Some text</p>
+      </div>
+    </div>
+    
+    <div class="column">
+      <div class="card">
+        <h3>Card 3</h3>
+        <p>Some text</p>
+        <p>Some text</p>
+      </div>
+    </div>
+    
+    <div class="column">
+      <div class="card">
+        <h3>Card 4</h3>
+        <p>Some text</p>
+        <p>Some text</p>
+      </div>
+    </div>
+  </div>
+
+
+  
+<div class="row">
+    <div class="column">
+      <div class="card">
+        <h3>Card 1</h3>
+        <p>Some text</p>
+        <p>Some text</p>
+      </div>
+    </div>
+  
+    <div class="column">
+      <div class="card">
+        <h3>Card 2</h3>
+        <p>Some text</p>
+        <p>Some text</p>
+      </div>
+    </div>
+    
+    <div class="column">
+      <div class="card">
+        <h3>Card 3</h3>
+        <p>Some text</p>
+        <p>Some text</p>
+      </div>
+    </div>
+    
+    <div class="column">
+      <div class="card">
+        <h3>Card 4</h3>
+        <p>Some text</p>
+        <p>Some text</p>
+      </div>
+    </div>
+  </div>
+
+
+
+
 {% endblock %}
 
 {% block end %}
+<script>
+$(document).ready(function(){
+    $('.parallax').parallax();
+  });
+        
+    </script>
 {% endblock %}
