--- a/Templates/Customer/thing.html
+++ b/Templates/Customer/thing.html
@@ -26,19 +26,21 @@
 
 {% block body %}
 
+
+
 <style>
 
   .row{
     align-items: stretch;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     flex-wrap: nowrap;
     overflow-x: auto;
     overflow-y: hidden;
 }
   .card {
     /*float: left;*/
-   max-width: 33.333%;
+   max-width: 30%;
     padding: .75rem;
     margin-bottom: 2rem;
     border: 0;
@@ -55,12 +57,21 @@
     font-size: 85%;
 }
 
-</style>    
+
+
+</style>   
+
+
+
 
 <div class="container">
+  
+<center><h4> <span style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ; color: rgb(10, 76, 161); font-weight: bold ; "  > TOP SPECIALITIES </span></h4></center>
+  
+
   <div class="row">
     <div class="card">
-      <center> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRKyIOTZPtsjLIXNUdOXmCOsIHFO8Q7VgvpfA&usqp=CAU"> </center>
+      <center> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRKyIOTZPtsjLIXNUdOXmCOsIHFO8Q7VgvpfA&usqp=CAU"></center>
       <p class="card-text"><center><h6> Ear Nose Throat</h6></center>  </p>
     </div>
     <div class="card">
@@ -72,6 +83,11 @@
       <p class="card-text"><center><h6> Urology </h6></center></p>
     </div>
      <div class="card">
+      <center><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQ_nsRFkcLElfW4JHGZK-ij9r1hwe-Dw-FK8Q&usqp=CAU"></center>
+      <p class="card-text"><center><h6> Cardiology </h6></center></p>
+    </div>
+
+    <div class="card">
       <center><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSwWWIdoOo3sFPtfNUcLs7G1n1hUwB0hlL_TQ&usqp=CAU"></center>
       <p class="card-text"><center><h6> Neurology </h6></center></p>
     </div>
