--- a/Templates/Customer/hosp-info.html
+++ b/Templates/Customer/hosp-info.html
@@ -10,6 +10,7 @@
     <div class="parallax"><img src="https://pbs.twimg.com/media/Dd37dlNVMAAHKon.jpg"></div>
      </div>
 
+<div class="container">
     <div class="row">
 
         <div class="col s12 m4">
