--- a/Templates/Customer/hosp-info.html
+++ b/Templates/Customer/hosp-info.html
@@ -14,21 +14,20 @@
     <div class="row">
 
         <div class="col s12 m4">
-          <h2>About Me</h2>
-          <h5>Photo of me:</h5>
-          <iframe width="350" height="350" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJmYAMfkCDGjkRy5frWVOV__g&key=AIzaSyBuByTw9-fvhI5NbMzGb_uFWrxGZsGZdlc" allowfullscreen></iframe>
-          <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+          <h4>Christian Medical College, Ludhiana</h4>
+          <h7>ADDRESS:Brown Rd, CMC Campus, Ludhiana, Punjab 141008;  Phone: 0161 211 5000</h7>
+          <iframe width="300" height="300" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJmYAMfkCDGjkRy5frWVOV__g&key=AIzaSyBuByTw9-fvhI5NbMzGb_uFWrxGZsGZdlc" allowfullscreen></iframe>
+          <p></p>
           
+      </div>
+
         <div class="col s12 m8">
-          <h2>TITLE HEADING</h2>
-          <h5>Title description, Dec 7, 2017</h5>
-          <div class="fakeimg">Fake Image</div>
-          <p>Some text..</p>
-          <p>Sunt in culpa qui officia deserun.</p>
-         
+          <h3>About Us</h3>
+          <p>The Christian Medical College and Hospital is a private, minority-run teaching hospital in Ludhiana, India. Founded in 1894, it was the first medical school for women in Asia.</p>
+          <p>The National Institutional Ranking Framework (NIRF) ranked CMC Ludhiana 18 among medical colleges in India in 2020. CMC Ludhiana is ranked 28th by India Today in 2020 and 13th by Outlook India among the medical colleges of India in 2019.</p>
+         <p>The hospital provides a wide variety of services, ranging from primary peripheral care to superspecialty care. Departments and services include Anesthesia and Critical Care, Clinical Psychology, Dermatology, ENT, Gynaecology and Obstetrics, Internal Medicine and Specialties, Ophthalmology, Orthopaedics, Pediatrics, Psychiatry, Physiotherapy, Radiation Therapy and surgical specialties. Superspecialty services like Cardiology, Cardio Thoracic Surgery, Neurosurgery, Oncology, Neonatology, Neurology, Nephrology, Pediatric Surgery, Plastic Surgery & Microsurgery and Urology & Transplantation and Clinical Hematology. The hospital's Psychiatry Department is combating the substance abuse crisis in Punjab. The Department offers de-addiction services and has found that most patients are between 20–30 years old and are addicted to anything from cough syrup and heroin to cocaine and alcohol.</p>
         </div>
 
-      </div>
 
    
    
