--- a/Templates/Customer/hosp-info.html
+++ b/Templates/Customer/hosp-info.html
@@ -8,305 +8,313 @@
 
 <div class="parallax-container">
     <div class="parallax"><img src="https://pbs.twimg.com/media/Dd37dlNVMAAHKon.jpg"></div>
-     </div>
+</div>
 
 <div class="container">
     <div class="row">
 
         <div class="col s12 m4">
-          <h4>Christian Medical College, Ludhiana</h4>
-          <h7>ADDRESS:Brown Rd, CMC Campus, Ludhiana, Punjab 141008;  Phone: 0161 211 5000</h7>
-          <iframe width="300" height="300" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJmYAMfkCDGjkRy5frWVOV__g&key=AIzaSyBuByTw9-fvhI5NbMzGb_uFWrxGZsGZdlc" allowfullscreen></iframe>
-          <p></p>
-          
-      </div>
+            <h4>Christian Medical College, Ludhiana</h4>
+            <h6>ADDRESS:Brown Rd, CMC Campus, Ludhiana, Punjab 141008; Phone: 0161 211 5000</h6>
+            <div class="video-container">
+                <iframe class="responsive-img" frameborder="0" style="border:0"
+                        src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJmYAMfkCDGjkRy5frWVOV__g&key=AIzaSyBuByTw9-fvhI5NbMzGb_uFWrxGZsGZdlc"
+                        allowfullscreen></iframe>
+            </div>
+            <p></p>
 
+        </div>
+        
         <div class="col s12 m8">
-          <h3>About Us</h3>
-          <p>The Christian Medical College and Hospital is a private, minority-run teaching hospital in Ludhiana, India. Founded in 1894, it was the first medical school for women in Asia.</p>
-          <p>The National Institutional Ranking Framework (NIRF) ranked CMC Ludhiana 18 among medical colleges in India in 2020. CMC Ludhiana is ranked 28th by India Today in 2020 and 13th by Outlook India among the medical colleges of India in 2019.</p>
-         <p>The hospital provides a wide variety of services, ranging from primary peripheral care to superspecialty care. Departments and services include Anesthesia and Critical Care, Clinical Psychology, Dermatology, ENT, Gynaecology and Obstetrics, Internal Medicine and Specialties, Ophthalmology, Orthopaedics, Pediatrics, Psychiatry, Physiotherapy, Radiation Therapy and surgical specialties. Superspecialty services like Cardiology, Cardio Thoracic Surgery, Neurosurgery, Oncology, Neonatology, Neurology, Nephrology, Pediatric Surgery, Plastic Surgery & Microsurgery and Urology & Transplantation and Clinical Hematology. The hospital's Psychiatry Department is combating the substance abuse crisis in Punjab. The Department offers de-addiction services and has found that most patients are between 20–30 years old and are addicted to anything from cough syrup and heroin to cocaine and alcohol.</p>
+            <h3>About Us</h3>
+            <p>The Christian Medical College and Hospital is a private, minority-run teaching hospital in Ludhiana,
+                India. Founded in 1894, it was the first medical school for women in Asia.</p>
+            <p>The National Institutional Ranking Framework (NIRF) ranked CMC Ludhiana 18 among medical colleges in
+                India in 2020. CMC Ludhiana is ranked 28th by India Today in 2020 and 13th by Outlook India among the
+                medical colleges of India in 2019.</p>
+            <p>The hospital provides a wide variety of services, ranging from primary peripheral care to superspecialty
+                care. Departments and services include Anesthesia and Critical Care, Clinical Psychology, Dermatology,
+                ENT, Gynaecology and Obstetrics, Internal Medicine and Specialties, Ophthalmology, Orthopaedics,
+                Pediatrics, Psychiatry, Physiotherapy, Radiation Therapy and surgical specialties. Superspecialty
+                services like Cardiology, Cardio Thoracic Surgery, Neurosurgery, Oncology, Neonatology, Neurology,
+                Nephrology, Pediatric Surgery, Plastic Surgery & Microsurgery and Urology & Transplantation and Clinical
+                Hematology. The hospital's Psychiatry Department is combating the substance abuse crisis in Punjab. The
+                Department offers de-addiction services and has found that most patients are between 20–30 years old and
+                are addicted to anything from cough syrup and heroin to cocaine and alcohol.</p>
         </div>
 
+    </div>
 
-   
-   
-</div>
+    {% block style %}
+    <style>
+        * {
+            box-sizing: border-box;
+        }
 
-{% block style %}
-<style>
-    * {
-      box-sizing: border-box;
-    }
-    
-    body {
-      font-family: Arial, Helvetica, sans-serif;
-    }
-    
-    /* Float four columns side by side */
-    .column {
-      float: left;
-      width: 25%;
-      padding: 0 10px;
-    }
-    
-    /* Remove extra left and right margins, due to padding */
-    .row {margin: 0 -5px;}
-    
-    /* Clear floats after the columns */
-    .row:after {
-      content: "";
-      display: table;
-      clear: both;
-    }
-    
-    /* Responsive columns */
-    @media screen and (max-width: 600px) {
-      .column {
-        width: 100%;
-        display: block;
-        margin-bottom: 20px;
-      }
-    }
-    
-    /* Style the counter cards */
-    .card {
-      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-      padding: 16px;
-      text-align: center;
-      background-color: #f1f1f1;
-    }
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        /* Float four columns side by side */
+        .column {
+            float: left;
+            width: 25%;
+            padding: 0 10px;
+        }
+
+        /* Remove extra left and right margins, due to padding */
+        .row {
+            margin: 0 -5px;
+        }
+
+        /* Clear floats after the columns */
+        .row:after {
+            content: "";
+            display: table;
+            clear: both;
+        }
+
+        /* Responsive columns */
+        @media screen and (max-width: 600px) {
+            .column {
+                width: 100%;
+                display: block;
+                margin-bottom: 20px;
+            }
+        }
+
+        /* Style the counter cards */
+        .card {
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+            padding: 16px;
+            text-align: center;
+            background-color: #f1f1f1;
+        }
     </style>
-{% endblock %}
+    {% endblock %}
 
 
+    <center><h3><span
+            style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ; color: rgb(10, 76, 161); font-weight: bold ; "> Consult Leading Doctors Over Video </span>
+    </h3></center>
+    <p></p>
 
-<center><h3><span style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ; color: rgb(10, 76, 161); font-weight: bold ; "  > Consult Leading Doctors Over Video </span></h3></center>
-<p></p>
+    <div class="row">
+        <div class="column">
+            <div class="card">
+                <h3>Name</h3>
+                <p>Designation, experience, Language</p>
+                <p>Consultation fees</p>
+            </div>
+        </div>
 
-<div class="row">
-  <div class="column">
-    <div class="card">
-      <h3>Name</h3>
-      <p>Designation, experience, Language</p>
-      <p>Consultation fees</p>
-    </div>
-  </div>
+        <div class="column">
+            <div class="card">
+                <h3>Card 2</h3>
+                <p>Some text</p>
+                <p>Some text</p>
+            </div>
+        </div>
 
-  <div class="column">
-    <div class="card">
-      <h3>Card 2</h3>
-      <p>Some text</p>
-      <p>Some text</p>
-    </div>
-  </div>
-  
-  <div class="column">
-    <div class="card">
-      <h3>Card 3</h3>
-      <p>Some text</p>
-      <p>Some text</p>
-    </div>
-  </div>
-  
-  <div class="column">
-    <div class="card">
-      <h3>Card 4</h3>
-      <p>Some text</p>
-      <p>Some text</p>
-    </div>
-  </div>
-</div>
+        <div class="column">
+            <div class="card">
+                <h3>Card 3</h3>
+                <p>Some text</p>
+                <p>Some text</p>
+            </div>
+        </div>
 
-<div class="row">
-    <div class="column">
-      <div class="card">
-        <h3>Card 1</h3>
-        <p>Some text</p>
-        <p>Some text</p>
-      </div>
+        <div class="column">
+            <div class="card">
+                <h3>Card 4</h3>
+                <p>Some text</p>
+                <p>Some text</p>
+            </div>
+        </div>
     </div>
-  
-    <div class="column">
-      <div class="card">
-        <h3>Card 2</h3>
-        <p>Some text</p>
-        <p>Some text</p>
-      </div>
-    </div>
-    
-    <div class="column">
-      <div class="card">
-        <h3>Card 3</h3>
-        <p>Some text</p>
-        <p>Some text</p>
-      </div>
-    </div>
-    
-    <div class="column">
-      <div class="card">
-        <h3>Card 4</h3>
-        <p>Some text</p>
-        <p>Some text</p>
-      </div>
-    </div>
-  </div>
 
+    <div class="row">
+        <div class="column">
+            <div class="card">
+                <h3>Card 1</h3>
+                <p>Some text</p>
+                <p>Some text</p>
+            </div>
+        </div>
 
-  
-<div class="row">
-    <div class="column">
-      <div class="card">
-        <h3>Card 1</h3>
-        <p>Some text</p>
-        <p>Some text</p>
-      </div>
+        <div class="column">
+            <div class="card">
+                <h3>Card 2</h3>
+                <p>Some text</p>
+                <p>Some text</p>
+            </div>
+        </div>
+
+        <div class="column">
+            <div class="card">
+                <h3>Card 3</h3>
+                <p>Some text</p>
+                <p>Some text</p>
+            </div>
+        </div>
+
+        <div class="column">
+            <div class="card">
+                <h3>Card 4</h3>
+                <p>Some text</p>
+                <p>Some text</p>
+            </div>
+        </div>
     </div>
-  
-    <div class="column">
-      <div class="card">
-        <h3>Card 2</h3>
-        <p>Some text</p>
-        <p>Some text</p>
-      </div>
-    </div>
-    
-    <div class="column">
-      <div class="card">
-        <h3>Card 3</h3>
-        <p>Some text</p>
-        <p>Some text</p>
-      </div>
-    </div>
-    
-    <div class="column">
-      <div class="card">
-        <h3>Card 4</h3>
-        <p>Some text</p>
-        <p>Some text</p>
-      </div>
-    </div>
-  </div>
 
 
-  
-<div class="row">
-    <div class="column">
-      <div class="card">
-        <h3>Card 1</h3>
-        <p>Some text</p>
-        <p>Some text</p>
-      </div>
+    <div class="row">
+        <div class="column">
+            <div class="card">
+                <h3>Card 1</h3>
+                <p>Some text</p>
+                <p>Some text</p>
+            </div>
+        </div>
+
+        <div class="column">
+            <div class="card">
+                <h3>Card 2</h3>
+                <p>Some text</p>
+                <p>Some text</p>
+            </div>
+        </div>
+
+        <div class="column">
+            <div class="card">
+                <h3>Card 3</h3>
+                <p>Some text</p>
+                <p>Some text</p>
+            </div>
+        </div>
+
+        <div class="column">
+            <div class="card">
+                <h3>Card 4</h3>
+                <p>Some text</p>
+                <p>Some text</p>
+            </div>
+        </div>
     </div>
-  
-    <div class="column">
-      <div class="card">
-        <h3>Card 2</h3>
-        <p>Some text</p>
-        <p>Some text</p>
-      </div>
-    </div>
-    
-    <div class="column">
-      <div class="card">
-        <h3>Card 3</h3>
-        <p>Some text</p>
-        <p>Some text</p>
-      </div>
-    </div>
-    
-    <div class="column">
-      <div class="card">
-        <h3>Card 4</h3>
-        <p>Some text</p>
-        <p>Some text</p>
-      </div>
-    </div>
-  </div>
 
 
+    <div class="row">
+        <div class="column">
+            <div class="card">
+                <h3>Card 1</h3>
+                <p>Some text</p>
+                <p>Some text</p>
+            </div>
+        </div>
 
-  
-<div class="row">
-    <div class="column">
-      <div class="card">
-        <h3>Card 1</h3>
-        <p>Some text</p>
-        <p>Some text</p>
-      </div>
+        <div class="column">
+            <div class="card">
+                <h3>Card 2</h3>
+                <p>Some text</p>
+                <p>Some text</p>
+            </div>
+        </div>
+
+        <div class="column">
+            <div class="card">
+                <h3>Card 3</h3>
+                <p>Some text</p>
+                <p>Some text</p>
+            </div>
+        </div>
+
+        <div class="column">
+            <div class="card">
+                <h3>Card 4</h3>
+                <p>Some text</p>
+                <p>Some text</p>
+            </div>
+        </div>
     </div>
-  
-    <div class="column">
-      <div class="card">
-        <h3>Card 2</h3>
-        <p>Some text</p>
-        <p>Some text</p>
-      </div>
-    </div>
-    
-    <div class="column">
-      <div class="card">
-        <h3>Card 3</h3>
-        <p>Some text</p>
-        <p>Some text</p>
-      </div>
-    </div>
-    
-    <div class="column">
-      <div class="card">
-        <h3>Card 4</h3>
-        <p>Some text</p>
-        <p>Some text</p>
-      </div>
-    </div>
-  </div>
 
 
-  
-<div class="row">
-    <div class="column">
-      <div class="card">
-        <h3>Card 1</h3>
-        <p>Some text</p>
-        <p>Some text</p>
-      </div>
+    <div class="row">
+        <div class="column">
+            <div class="card">
+                <h3>Card 1</h3>
+                <p>Some text</p>
+                <p>Some text</p>
+            </div>
+        </div>
+
+        <div class="column">
+            <div class="card">
+                <h3>Card 2</h3>
+                <p>Some text</p>
+                <p>Some text</p>
+            </div>
+        </div>
+
+        <div class="column">
+            <div class="card">
+                <h3>Card 3</h3>
+                <p>Some text</p>
+                <p>Some text</p>
+            </div>
+        </div>
+
+        <div class="column">
+            <div class="card">
+                <h3>Card 4</h3>
+                <p>Some text</p>
+                <p>Some text</p>
+            </div>
+        </div>
     </div>
-  
-    <div class="column">
-      <div class="card">
-        <h3>Card 2</h3>
-        <p>Some text</p>
-        <p>Some text</p>
-      </div>
+
+
+    <div class="row">
+        <div class="column">
+            <div class="card">
+                <h3>Card 1</h3>
+                <p>Some text</p>
+                <p>Some text</p>
+            </div>
+        </div>
+
+        <div class="column">
+            <div class="card">
+                <h3>Card 2</h3>
+                <p>Some text</p>
+                <p>Some text</p>
+            </div>
+        </div>
+
+        <div class="column">
+            <div class="card">
+                <h3>Card 3</h3>
+                <p>Some text</p>
+                <p>Some text</p>
+            </div>
+        </div>
+
+        <div class="column">
+            <div class="card">
+                <h3>Card 4</h3>
+                <p>Some text</p>
+                <p>Some text</p>
+            </div>
+        </div>
     </div>
-    
-    <div class="column">
-      <div class="card">
-        <h3>Card 3</h3>
-        <p>Some text</p>
-        <p>Some text</p>
-      </div>
-    </div>
-    
-    <div class="column">
-      <div class="card">
-        <h3>Card 4</h3>
-        <p>Some text</p>
-        <p>Some text</p>
-      </div>
-    </div>
-  </div>
 
 
+    {% endblock %}
 
+    {% block end %}
+    <script>
+		$(document).ready(function() {
+			$(".parallax").parallax();
+		});
 
-{% endblock %}
-
-{% block end %}
-<script>
-$(document).ready(function(){
-    $('.parallax').parallax();
-  });
-        
     </script>
-{% endblock %}
+    {% endblock %}
