Can now change summary and phone number

--- a/Templates/Admin/sidebar.html
+++ b/Templates/Admin/sidebar.html
@@ -26,6 +26,10 @@
 		<i class="material-icons">cloud</i>Settings</a>
 </li>
 <li>
+	<a class="waves-effect" href="/admin/info">
+		<i class="material-icons">cloud</i>Info</a>
+</li>
+<li>
 	<div class="divider"></div>
 </li>
 <li>
