Pagination on past and future bookings

--- a/Templates/Doctor/sidebar.html
+++ b/Templates/Doctor/sidebar.html
@@ -27,8 +27,12 @@
 		<i class="material-icons">timer</i>Bookings</a>
 </li>
 <li>
-	<a class="waves-effect" href="/doctor/all-bookings">
-		<i class="material-icons">timer</i>All Bookings</a>
+	<a class="waves-effect" href="/doctor/future-bookings">
+		<i class="material-icons">timer</i>Future Bookings</a>
+</li>
+<li>
+	<a class="waves-effect" href="/doctor/past-bookings">
+		<i class="material-icons">timer</i>Past Bookings</a>
 </li>
 <li>
 	<div class="divider"></div>
