added page for each patient

--- a/Templates/Doctor/my-patients.html
+++ b/Templates/Doctor/my-patients.html
@@ -28,7 +28,7 @@
                                     <p>{{ patient.patient.email }}</p>
                                 </div>
                                 <div class="card-action">
-                                    <a href="#">Details</a>
+                                    <a href="/doctor/patient/{{ patient.patient._id }}">Details</a>
                                 </div>
                             </div>
                         </div>
