--- a/Templates/Doctor/sidebar.html
+++ b/Templates/Doctor/sidebar.html
@@ -35,6 +35,10 @@
 		<i class="material-icons">timer</i>Past Bookings</a>
 </li>
 <li>
+	<a class="waves-effect" href="/doctor/my-patients">
+		<i class="material-icons">group</i>My Patients</a>
+</li>
+<li>
 	<div class="divider"></div>
 </li>
 <li>
