--- a/Templates/Doctor/my-patients.html
+++ b/Templates/Doctor/my-patients.html
@@ -20,7 +20,7 @@
                     <div class="col s12 m6">
                         <div class="card horizontal">
                             <div class="card-image">
-                                <img src="https://lorempixel.com/100/190/nature/6">
+                                <img src="{{ patient.patient.email | emailToImg }}">
                             </div>
                             <div class="card-stacked">
                                 <div class="card-content">
