--- a/Templates/Admin/doctor.html
+++ b/Templates/Admin/doctor.html
@@ -12,7 +12,7 @@
 	<div class="container">
 		<div class="row" style="margin-top:2em">
 			<div class="col s2">
-				<img src="{{ gravatar }}" alt="" class="circle responsive-img">
+				<img src="{{ email | emailToImg }}" alt="" class="circle responsive-img">
 			</div>
 			<div class="col s10">
 				<h5>{{ name }}</h5>
