--- a/Templates/Customer/search.html
+++ b/Templates/Customer/search.html
@@ -12,7 +12,7 @@
 					<div class="col s12 l6">
 						<div class="card horizontal">
 							<div class="card-image">
-								<img src="{{ gravatar(hit._source.email) }}">
+								<img src="{{ hit._source.email | emailToImg }}">
 							</div>
 							<div class="card-stacked">
 								<div class="card-content">
@@ -31,7 +31,7 @@
 					<div class="col s12 l6">
 						<div class="card horizontal">
 							<div class="card-image">
-								<img src='{{ gravatar(hit._source.email) }}'>
+								<img src='{{ hit._source.email | emailToImg }}'>
 							</div>
 							<div class="card-stacked">
 								<div class="card-content">
