--- a/Templates/Doctor/sidebar.html
+++ b/Templates/Doctor/sidebar.html
@@ -3,7 +3,7 @@
 		<div class="background blue lighten-5">
 			{# <img src="images/office.jpg"> #}
 		</div>
-		<a href="#user"><img class="circle" src="{{ sidebar.gravatar }}"></a>
+		<a href="#user"><img class="circle" src="{{ sidebar.email | emailToImg }}"></a>
 		<a href="#name">
 			<span class="black-text name">{{ sidebar.name }}</span></a>
 		<a href="#email">
