Added end events to stop people from booking there

--- a/Templates/Customer/book.html
+++ b/Templates/Customer/book.html
@@ -115,7 +115,7 @@
 		$('.modal').modal();
 	});
 
-	var data = JSON.parse('{{ json | safe }}')
+	var data = JSON.parse('{{ json | safe }}');
 
 	var start = new Date(data.start);
 	var end = new Date(data.end);
