Can now see history files

--- a/Templates/Customer/history.html
+++ b/Templates/Customer/history.html
@@ -1,10 +1,23 @@
 {% extends "../Defaults/default.html" %}
 
+{% block style %}
+    {{ super() }}
+    <style>
+        #pdfModal {
+            width: 75% !important;
+            max-height: 100% !important
+        }
+
+        /* increase the width and height! */
+        #pdfViewer {
+            height: 70vh
+        }
+    </style>
+{% endblock %}
+
 {% block navbar %}
     {% include "./navbar.html" %}
 {% endblock %}
-
-
 
 {% block body %}
     <div class="container">
@@ -14,7 +27,8 @@
                     <div class="file-field input-field">
                         <div class="btn">
                             <span>File</span>
-                            <input type="file" name="files" multiple accept="image/jpeg,image/gif,image/png,application/pdf;capture=camera">
+                            <input type="file" name="files" multiple
+                                   accept="image/jpeg,image/gif,image/png,application/pdf;capture=camera">
                         </div>
                         <div class="file-path-wrapper">
                             <input class="file-path validate" type="text" placeholder="Upload one or more files">
@@ -22,11 +36,95 @@
                     </div>
                 </div>
                 <div class="col s12 m2">
-                    <button class="btn waves-effect waves-light light-blue darken-2" type="submit" name="action" style="margin-top: 1.5em;">Upload
+                    <button class="btn waves-effect waves-light light-blue darken-2" type="submit" name="action"
+                            style="margin-top: 1.5em;">Upload
                         <i class="material-icons right">send</i>
                     </button>
                 </div>
             </div>
         </form>
     </div>
+    <div class="divider"></div>
+    <div class="container">
+        <div class="row" style="margin-top: 1em">
+            {% for item in history %}
+                {% if item.mimetype.split('/')[0] == "image" %}
+                    <div class="col s12 m6 l4">
+                        <div class="card">
+                            <div class="card-image">
+                                <img class="materialboxed" src="/customer/history/{{ item._id }}">
+                                {#                        <span class="card-title">Card Title</span>#}
+                            </div>
+                        </div>
+                    </div>
+                {% elseif item.mimetype == "application/pdf" %}
+                    <div class="col s12 m6 l4">
+                        <div class="card blue-grey darken-1">
+                            <div class="card-content white-text">
+                                <p class="card-title">{{ item.originalName }}</p>
+                            </div>
+                            <div class="card-action">
+                                <a href="/customer/history/{{ item._id }}" class="waves-effect waves-blue viewPdf btn-flat">View</a>
+                            </div>
+                        </div>
+                    </div>
+                {% endif %}
+            {% endfor %}
+        </div>
+    </div>
+    <div id="pdfModal" class="modal">
+        <div class="modal-content">
+            <div id="pdfViewer"></div>
+        </div>
+        <div class="modal-footer">
+            <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+        </div>
+    </div>
+{% endblock %}
+
+{% block end %}
+    {{ super() }}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfobject/2.1.1/pdfobject.min.js"
+            integrity="sha512-4ze/a9/4jqu+tX9dfOqJYSvyYd5M6qum/3HpCLr+/Jqf0whc37VUbkpNGHR7/8pSnCFw47T1fmIpwBV7UySh3g=="
+            crossorigin="anonymous"></script>
+    <script>
+		$(document).ready(function() {
+			$(".materialboxed").materialbox();
+		});
+    </script>
+    <script>
+		let instances, pdfModal;
+		document.addEventListener("DOMContentLoaded", function() {
+			let elem = document.querySelectorAll("#pdfModal");
+			instances = M.Modal.init(elem, {});
+			pdfModal = instances[0];
+		});
+
+		let clickHandler = function(e) {
+
+			e.preventDefault();
+			pdfModal.open();
+			var pdfURL = this.getAttribute("href");
+
+			var options = {
+				pdfOpenParams: {
+					navpanes: 0,
+					toolbar: 0,
+					statusbar: 0,
+					view: "FitV"
+				}
+			};
+
+			let pdf = PDFObject.embed(pdfURL, "#pdfViewer", options);
+			if (!pdf) {
+				M.toast({ html: "PDF loading failed" });
+			}
+		};
+
+		let a = document.querySelectorAll(".viewPdf");
+
+		for (let i = 0; i < a.length; i++) {
+			a[i].addEventListener("click", clickHandler);
+		}
+    </script>
 {% endblock %}
