--- a/Templates/Customer/history.html
+++ b/Templates/Customer/history.html
@@ -2,8 +2,14 @@
 
 {% block style %}
     {{ super() }}
+    <link rel="stylesheet" href="https://unpkg.com/easymde/dist/easymde.min.css">
     <style>
         #pdfModal {
+            width: 75% !important;
+            max-height: 100% !important
+        }
+
+        #mdModal {
             width: 75% !important;
             max-height: 100% !important
         }
@@ -64,7 +70,20 @@
                                 <p class="card-title">{{ item.originalName }}</p>
                             </div>
                             <div class="card-action">
-                                <a href="/customer/history/{{ item._id }}" class="waves-effect waves-blue viewPdf btn-flat">View</a>
+                                <a href="/customer/history/{{ item._id }}"
+                                   class="waves-effect waves-blue viewPdf btn-flat">View</a>
+                            </div>
+                        </div>
+                    </div>
+                {% elseif item.mimetype == "text/markdown" %}
+                    <div class="col s12 m6 l4">
+                        <div class="card blue-grey darken-1">
+                            <div class="card-content white-text">
+                                <p class="card-title">{{ item.originalName }}</p>
+                            </div>
+                            <div class="card-action">
+                                <a href="/customer/history/{{ item._id }}"
+                                        class="waves-effect waves-blue viewMD btn-flat">View</a>
                             </div>
                         </div>
                     </div>
@@ -72,12 +91,21 @@
             {% endfor %}
         </div>
     </div>
+
     <div id="pdfModal" class="modal">
         <div class="modal-content">
             <div id="pdfViewer"></div>
         </div>
         <div class="modal-footer">
             <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+        </div>
+    </div>
+    <div id="mdModal" class="modal">
+        <div class="modal-content">
+            <textarea id="mdTextArea"></textarea>
+        </div>
+        <div class="modal-footer">
+            {#            <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>#}
         </div>
     </div>
 {% endblock %}
@@ -87,6 +115,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfobject/2.1.1/pdfobject.min.js"
             integrity="sha512-4ze/a9/4jqu+tX9dfOqJYSvyYd5M6qum/3HpCLr+/Jqf0whc37VUbkpNGHR7/8pSnCFw47T1fmIpwBV7UySh3g=="
             crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/easymde/dist/easymde.min.js"></script>
     <script>
 		$(document).ready(function() {
 			$(".materialboxed").materialbox();
@@ -125,6 +154,50 @@
 
 		for (let i = 0; i < a.length; i++) {
 			a[i].addEventListener("click", clickHandler);
+		}
+    </script>
+    <script>
+		let mdInstances, mdModal, easyMDE;
+		document.addEventListener("DOMContentLoaded", function() {
+			let elem = document.querySelectorAll("#mdModal");
+			mdInstances = M.Modal.init(elem, {});
+			mdModal = mdInstances[0];
+		});
+
+
+		let mdHandler = function(e) {
+			e.preventDefault();
+			if (easyMDE) {
+				//easyMDE.toTextArea();
+				$(".EasyMDEContainer").remove();
+				easyMDE = null;
+			}
+
+			var mdUrl = this.getAttribute("href");
+
+			$.ajax({
+				url: mdUrl,
+				success: function(result) {
+					easyMDE = new EasyMDE({
+						element: document.getElementById("mdTextArea"),
+						toolbar: false,
+						minHeight: "70vh",
+						initialValue: result
+					});
+
+					if (!easyMDE.isPreviewActive()) {
+						easyMDE.togglePreview();
+					}
+
+					mdModal.open();
+				}
+			});
+		};
+
+		let buttons = document.querySelectorAll(".viewMD");
+
+		for (let i = 0; i < buttons.length; i++) {
+			buttons[i].addEventListener("click", mdHandler);
 		}
     </script>
 {% endblock %}
