Doctors can now see patients history

--- a/Templates/Customer/history.html
+++ b/Templates/Customer/history.html
@@ -97,7 +97,7 @@
             <div id="pdfViewer"></div>
         </div>
         <div class="modal-footer">
-            <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+{#            <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>#}
         </div>
     </div>
     <div id="mdModal" class="modal">
