Doctors can now edit markdown pages

--- a/Templates/Customer/history.html
+++ b/Templates/Customer/history.html
@@ -182,7 +182,7 @@
 						element: document.getElementById("mdTextArea"),
 						toolbar: false,
 						minHeight: "70vh",
-						initialValue: result
+						initialValue: atob(result)
 					});
 
 					if (!easyMDE.isPreviewActive()) {
